redash/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redash-ingress
  namespace: redash
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: traefik
  rules:
  - host: redash.mynet.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redash  # <-- RedashのService名
            port:
              number: 80  # <-- RedashのServiceが公開しているポート
